Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-91139

Select handles Left- and RightPoint disappears when click select all on editPopupmenu without margins of textedit.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.15.11
    • 5.15.2
    • QPA
    • Android
    • 8a25f8d7e4 (qt/tqtc-qtbase/5.15)
    • 2022wk26FOQtforAndroid, 2022wk28FOQtforAndroid

      Select handles Left- and RightPoint disappears when click select all on editPopupmenu without margins of QLineEdit. When a left margin is at least 2 then select all works fine.

      found during investigation of:
      QTBUG-71900

        1. Screenshot_20210215-145004.jpg
          Screenshot_20210215-145004.jpg
          171 kB
        2. Screenshot_20210215-145014.jpg
          Screenshot_20210215-145014.jpg
          165 kB
        3. Screenshot_20210215-145027.jpg
          Screenshot_20210215-145027.jpg
          179 kB
        4. 15px_.png
          15px_.png
          100 kB
        5. 5px_.png
          5px_.png
          95 kB
        6. 5px_word.png
          5px_word.png
          97 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            bartlomiejmoskal Bartlomiej Moskal
            pekkagehor Pekka Gehör
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes