Fix select handles disappears issues

Select handles {Left, Right}Point disappears when double click a first
word or select all on QLineEdit without set leftMargin of QLineEdit.
Cursor is not shown if it goes over the widget frame on main window or
on dialog. To prevent this cursor position is not decreased if it is less than one.

Fixes: QTBUG-91139
Change-Id: Ib54eb09e51076f7f41a2fca7eb7630f3c5591fed
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>